Fixed footer not responsive

--- a/src/app/components/main/footer/footer.component.scss
+++ b/src/app/components/main/footer/footer.component.scss
@@ -18,6 +18,6 @@ ul {
   padding-left: 0;
 }
 
-.sm-height {
-  height: 40px;
+.bg-info:last-child {
+  border: 5px solid red;
 }
